snippy-core in progress

--- a/containers/pgcoe_bacseq/Dockerfile
+++ b/containers/pgcoe_bacseq/Dockerfile
@@ -8,7 +8,12 @@ ENV PATH /opt/conda/envs/env/bin:$PATH
 COPY environment.yml .
 RUN conda env update -n root -f environment.yml && conda clean -a
 
+RUN conda install -c conda-forge python=3.9
+RUN conda install -c conda-forge mash
+RUN conda install -c bioconda bcftools
 RUN conda install -c conda-forge gsl
+#RUN conda install -c bioconda -c conda-forge -c defaults bioconda::snippy
+
 
 ENV PATH="${PATH}:/opt/miniconda/bin:/opt/miniconda/lib"
 ENV LD_LIBRARY_PATH="${PATH}"
