--- a/pgcoe_pipeline/Snakefile
+++ b/pgcoe_pipeline/Snakefile
@@ -26,11 +26,12 @@ rule all:
 	                     sample=SAMPLES,subsample=READ_SUBSAMPLES),
         vcf_filt=os.path.join(config['outdir'],config['runname'],"variants_filt.vcf.gz"),
         consensuses=expand(os.path.join(config['outdir'],'{sample}/{sample}_consensus.fa'),sample=SAMPLES),
-        ivariants=expand(os.path.join(config['outdir'],'{sample}/{sample}_ivariants.txt'),sample=SAMPLES),
+        ivariants=expand(os.path.join(config['outdir'],'{sample}/{sample}_ivariants.tsv'),sample=SAMPLES),
         #snippyout=expand(os.path.join(config['outdir'],'{sample}/snippy_{sample}','snps.vcf'),sample=SAMPLES),
         snippycore=config['outdir']+'/snippy/core.txt',
-        combinedcoverage=os.path.join(config['outdir'],config['runname'],'combinedcoverage.tsv')
-    
+        combinedcoverage=os.path.join(config['outdir'],config['runname'],'combinedcoverage.tsv'),
+        evorha=expand(config['outdir']+'/evorha/{sample}.hapfreq',sample=SAMPLES)
+	
 rule indexref:
     input:
         reference=config['reference']
@@ -209,20 +210,19 @@ rule ivariants:
         ref=config['reference'],
         threshold=0.2,
         depth=20,
-        prefix=os.path.join(config['outdir'],'{sample}/{sample}_consensus')
+        prefix=os.path.join(config['outdir'],'{sample}/{sample}_ivariants')
     output:
-        consensus=os.path.join(config['outdir'],'{sample}/{sample}_ivariants.txt'),
+        ivariants=os.path.join(config['outdir'],'{sample}/{sample}_ivariants.tsv'),
     resources:
         mem_mb=8000,
         runtime=240,
     log:
-        stdout="logs/{sample}/consensus.out",
-        stderr="logs/{sample}/consensus.err"
+        stderr="logs/{sample}/ivariants.err"
     shell:
         """
         samtools mpileup -aa -A -d 0 -Q 0 -f {params.ref} {input.tocall} | \
          ivar variants -q 20 -r {params.ref} -t {params.threshold} \
-           -m {params.depth} -p {params.prefix}  1> {output.consensus} 2> {log.stderr}
+           -m {params.depth} -p {params.prefix}  2>&1 > {log.stderr}
         
         """
 
@@ -254,7 +254,7 @@ rule snippy:
 
 rule snippy_core:
     input:
-        snippyout = expand(config['outdir']+'/{sample}/snippy_{sample}/snps.tab',sample=SAMPLES),
+        snippyout=expand(config['outdir']+'/{sample}/snippy_{sample}/snps.tab',sample=SAMPLES),
         indexedref="data/reference.fasta.amb"
     params:
         ref=config['reference'],
@@ -269,18 +269,19 @@ rule snippy_core:
     message: "Running snippy core"
     shell:
         """
-        snippy-core --ref {params.ref}  --prefix {params.prefix} {params.indirs} \
+        snippy-core --ref {params.ref}  --prefix {params.prefix} \
+            {params.indirs} \
             1> {log.stdout} 2> {log.stderr}
         """
 
 rule evorha:
     input:
-        bam=config['outdir']+'{sample}/{sample}_aln_trimmed_sorted.bam',
-        idx=config['outdir']+'{sample}/{sample}_aln_trimmed_sorted.bam.bai'
-    params:
+        bam=config['outdir']+'/{sample}/{sample}_aln_trimmed_sorted.bam',
+        idx=config['outdir']+'/{sample}/{sample}_aln_trimmed_sorted.bam.bai',
         ref=config['reference'],
-        bamln=config['outdir']+'/evorha/{sample}.bam',
-        idxln=config['outdir']+'/evorha/{sample}.bam.bai',
+    params:
+        bamln=config['outdir']+'/evorha/{sample}_sorted.bam',
+        idxln=config['outdir']+'/evorha/{sample}_sorted.bam.bai',
         prefix=config['outdir']+'/evorha/',
         indirs=expand(config['outdir']+'/{sample}/snippy_{sample}',sample=SAMPLES)
     container: "docker://sethnr/pgcoe_evorha:0.01"
@@ -288,10 +289,13 @@ rule evorha:
         coreout = config['outdir']+'/evorha/{sample}.hapfreq',
     log:
         stderr="logs/evorha/{sample}.err",
-    message: "Running snippy core"
+    message: "Running evorha"
     shell:
         """
-        ln -s {input.bam} {params.bamln}
-        ln -s {input.idx} {params.idxln}
-    	java -jar evorha.jar completeAnalysis {params.ref} {params.bamln} 2>&1 > {log.stderr}
+        if [ ! -L {params.bamln} ]; then
+	  ln {input.bam} {params.bamln}
+          ln {input.idx} {params.idxln}
+	fi
+	java -jar /jars/evorha.jar completeAnalysis {input.ref} {params.bamln} 2>&1 >> {log.stderr}
+        #java -jar /jars/evorha.jar completeAnalysis {input.ref} {input.bam} 2>&1 >> {log.stderr}
         """
