pi / depth script added

--- a/containers/pgcoe_evorha/Dockerfile
+++ b/containers/pgcoe_evorha/Dockerfile
@@ -9,9 +9,27 @@ COPY environment.yml .
 RUN conda env update -n root -f environment.yml && conda clean -a
 
 RUN conda install -y -c conda-forge openjdk
+ENV PATH="${PATH}:/opt/miniconda/bin:/opt/miniconda/lib"
+ENV LD_LIBRARY_PATH="${PATH}"
+
 
 WORKDIR /root/
 COPY evorha/evorha.jar /jars/evorha.jar
 
-ENV PATH="${PATH}:/opt/miniconda/bin:/opt/miniconda/lib"
-ENV LD_LIBRARY_PATH="${PATH}"
+RUN conda install -c bioconda -c conda-forge bioconda::predicthaplo
+
+# RUN conda install -y -c conda-forge make
+# RUN conda install -y -c conda-forge gxx
+# COPY PredictHaplo-2.1.4 /installs/PredictHaplo-2.1.4
+# WORKDIR /installs/PredictHaplo-2.1.4
+# RUN make 
+
+# RUN conda install -y -c conda-forge -c defaults cmake
+# COPY PredictHaplo-master /installs/PredictHaplo
+# WORKDIR /installs/PredictHaplo
+# RUN cmake -DCMAKE_BUILD_TYPE=Release -B build -S .
+# RUN cmake --build build
+
+
+
+
