--- a/pgcoe_pipeline/Snakefile
+++ b/pgcoe_pipeline/Snakefile
@@ -24,15 +24,27 @@ container: "docker://sethnr/pgcoe_bacseq:0.01"
 
 rule all:
     input:
-        coveragestats=expand(os.path.join(config['outdir'],'{sample}/{sample}_coverage_sub{subsample}.tsv'),
-	                     sample=SAMPLES,subsample=READ_SUBSAMPLES),
-        vcf_filt=os.path.join(config['outdir'],config['runname'],"variants_filt.vcf.gz"),
+        #coveragestats=expand(os.path.join(config['outdir'],'align/{sample}_coverage_sub{subsample}.tsv'),
+	#                     sample=SAMPLES,subsample=READ_SUBSAMPLES),
         consensuses=expand(os.path.join(config['outdir'],'ivar/{sample}_consensus.fa'),sample=SAMPLES),
+        ivariants=expand(os.path.join(config['outdir'],'ivar/{sample}_ivariants.tsv'),sample=SAMPLES),
+        pileupvcf=os.path.join(config['outdir'],'pileup',"all_variants_filt.vcf.gz"),
+        snippyvcf=config['outdir']+'/snippy/core.vcf',
         ivariants=expand(os.path.join(config['outdir'],'ivar/{sample}_ivariants.txt'),sample=SAMPLES),
         snippycore=config['outdir']+'/snippy/core.vcf',
         combinedcoverage=os.path.join(config['outdir'],config['runname'],'combinedcoverage.tsv'),
+        basedepth=config['outdir']+'/'+config['runname']+'/all_depth.txt',
         evorha=expand(config['outdir']+'/evorha/{sample}.hapfreq',sample=SAMPLES)
-	
+    output:
+        snippyvcf=config['outdir']+'/'+config['runname']+'/snippy_all_vars.vcf',
+        pileupvcf=config['outdir']+'/'+config['runname']+'/pileup_all_vars.vcf.gz',
+    shell:
+        """
+	cp {input.snippyvcf} {output.snippyvcf}
+	cp {input.pileupvcf} {output.pileupvcf}
+	"""
+
+
 rule indexref:
     input:
         reference=config['reference']
@@ -52,7 +64,7 @@ rule align_to_ref:
     params:
         ref=config['reference']
     output:
-        aligned = os.path.join(config['outdir'],'bwa/{sample}_aligned.bam') # .bam file output of aligned and sorted reads
+        aligned = os.path.join(config['outdir'],'align/{sample}_aligned.bam') # .bam file output of aligned and sorted reads
     log:
         stdout="logs/bwa/{sample}_aln.out",
         stderr="logs/bwa/{sample}_aln.err"
@@ -126,9 +138,26 @@ rule coverage:
         printf '%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\n' {wildcards.sample} {wildcards.subsample} `samtools coverage -d {params.maxdepth} -q {params.minmapqual} -Q {params.minbasequal} --no-header {input.subsamp}` > {output.coveragestats} 2> {log.stderr}
         """
 
+rule mdepth:
+    input:
+        bams=expand(os.path.join(config['outdir'],'align/{sample}_aln_itrim_sorted.bam'),sample=SAMPLES)
+    output:
+        config['outdir']+'/'+config['runname']+'/all_depth.txt'
+    params:
+        maxdepth=0,
+        minmapqual=60,
+        minbasequal=13
+    log:
+        stderr="logs/depth/"+config['runname']+".err"
+    shell:
+        """
+        samtools depth -a -H {input.bams} -o {output} 2>&1 >  {log.stderr}
+        """
+
+
 rule combinedcoverage:
     input:
-        coveragestats=expand(os.path.join(config['outdir'],'{sample}/{sample}_coverage_sub{subsample}.tsv'),sample=SAMPLES,subsample=READ_SUBSAMPLES)
+        coveragestats=expand(os.path.join(config['outdir'],'align/{sample}_coverage_sub{subsample}.tsv'),sample=SAMPLES,subsample=READ_SUBSAMPLES)
     output:
         combinedcoverage=os.path.join(config['outdir'],config['runname'],'combinedcoverage.tsv')
     log:
@@ -169,7 +198,8 @@ rule variantcalling:
         bcftools mpileup -Ou -o variants.bcf -f {params.ref} {input.tocall} 1> {log.stdout} 2> {log.stderr}
         bcftools call --ploidy 1 -vcO z -o {output.vcf} variants.bcf 1>> {log.stdout} 2>> {log.stderr}
         tabix -p vcf {output.vcf} 1>> {log.stdout} 2>> {log.stderr}
-        """
+	        
+	"""
 
 rule variantfilter:
     input:
@@ -233,7 +263,7 @@ rule ivariants:
         qual=20,
         prefix=os.path.join(config['outdir'],'ivar/{sample}_ivariants')
     output:
-        ivariants=os.path.join(config['outdir'],'ivar/{sample}_ivariants.txt'),
+        ivariants=os.path.join(config['outdir'],'ivar/{sample}_ivariants.tsv'),
     resources:
         mem_mb=8000,
         runtime=240,
@@ -243,7 +273,7 @@ rule ivariants:
         """
         cat {input.pileup} | \
          ivar variants -q {params.qual} -r {params.ref} -t {params.threshold} \
-           -m {params.depth} -p {params.prefix}  1> {output.ivariants} 2> {log.stderr}        
+           -m {params.depth} -p {params.prefix}  2>&1 >  {log.stderr}        
         """
 
 
@@ -257,7 +287,8 @@ rule snippy:
         ref=config['reference']
     container: "docker://staphb/snippy"
     output:
-        snippyout = os.path.join(config['outdir'],'{sample}/snippy_{sample}','snps.vcf') # .bam file output of aligned and sorted reads
+        vcf = os.path.join(config['outdir'],'snippy/snippy_{sample}','snps.vcf'),
+        tab = os.path.join(config['outdir'],'snippy/snippy_{sample}','snps.tab')
     log:
         stdout="logs/snippy/{sample}.out",
         stderr="logs/snippy/{sample}.err"
@@ -268,18 +299,18 @@ rule snippy:
             --ref {params.ref} \
             --R1 {input.read_location}/*R1* \
             --R2 {input.read_location}/*R2* \
-            --outdir results/{wildcards.sample}/snippy_{wildcards.sample} \
+            --outdir results/snippy/snippy_{wildcards.sample} \
             --force 1> {log.stdout} 2> {log.stderr}
         """
 
 rule snippy_core:
     input:
-        snippyout=expand(config['outdir']+'/{sample}/snippy_{sample}/snps.tab',sample=SAMPLES),
+        snippyout=expand(config['outdir']+'/snippy/snippy_{sample}/snps.tab',sample=SAMPLES),
         indexedref="data/reference.fasta.amb"
     params:
         ref=config['reference'],
         prefix=config['outdir']+'/snippy/core',
-        indirs=expand(config['outdir']+'/{sample}/snippy_{sample}',sample=SAMPLES)
+        indirs=expand(config['outdir']+'/snippy/snippy_{sample}',sample=SAMPLES)
     container: "docker://staphb/snippy"
     output:
         coreout = expand(config['outdir']+'/snippy/core.{suffix}',suffix=['aln','tab','txt','vcf']) 
@@ -296,15 +327,14 @@ rule snippy_core:
 
 rule evorha:
     input:
-        bam=config['outdir']+'align/{sample}_aln_itrim_sorted.bam',
-        idx=config['outdir']+'align/{sample}_aln_itrim_sorted.bam.bai'
-    params:
-        ref=config['reference'],
+        bam=config['outdir']+'/align/{sample}_aln_itrim_sorted.bam',
+        idx=config['outdir']+'/align/{sample}_aln_itrim_sorted.bam.bai',
+        ref=config['reference']
     params:
         bamln=config['outdir']+'/evorha/{sample}_sorted.bam',
         idxln=config['outdir']+'/evorha/{sample}_sorted.bam.bai',
         prefix=config['outdir']+'/evorha/',
-        indirs=expand(config['outdir']+'/{sample}/snippy_{sample}',sample=SAMPLES)
+        indirs=expand(config['outdir']+'/snippy/snippy_{sample}',sample=SAMPLES)
     container: "docker://sethnr/pgcoe_evorha:0.01"
     output:
         coreout = config['outdir']+'/evorha/{sample}.hapfreq',
@@ -313,7 +343,7 @@ rule evorha:
     message: "Running evorha"
     shell:
         """
-        if [ ! -L {params.bamln} ]; then
+        if [ ! -f {params.bamln} ]; then
 	        ln {input.bam} {params.bamln}
             ln {input.idx} {params.idxln}
 	    fi
